# ChessCore

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  conanfile.py
cmake/: chesscoreConfig.cmake.in
include/chesscore/: bitboard.h  bitboard_tables.h  bitmap.h  board.h  chesscore.h  epd.h  fen.h  magic.h  move.h  perft.h  piece.h  position.h  position_types.h  square.h  table.h  zobrist.h
include/chesscore_io/: bitboard_io.h  bitmap_io.h  chesscore_io.h  move_io.h  piece_io.h  position_io.h  square_io.h
src/: bitboard.cpp  bitboard_tables.cpp  bitmap.cpp  board.cpp  fen.cpp  move.cpp  piece.cpp  position.cpp  position_types.cpp  square.cpp  table.cpp
src/chesscore/: bitboard.cpp  board.cpp  chesscore.cpp  epd.cpp  fen.cpp  magic.cpp  move.cpp  perft.cpp  piece.cpp  position.cpp  position_types.cpp  square.cpp  zobrist.cpp
src/chesscore_io/: move_io.cpp  piece_io.cpp  position_io.cpp  square_io.cpp
test/: .clang-tidy  CMakeLists.txt  bitboard_test.cpp  coordinate_test.cpp  fen_test.cpp
test/bitboard/: attack_test.cpp  bitboard_test.cpp  bitmap_test.cpp  capture_move_generation_test.cpp  make_move_test.cpp  move_generation_test.cpp  unmake_move_test.cpp
test/data/: coordinate_test.cpp  epd_test.cpp  fen_test.cpp  move_test.cpp  piece_test.cpp  zobrist_test.cpp
test/magic/: attack_map_test.cpp  block_mask_test.cpp  blocker_iteration_test.cpp
test/position/: hash_test.cpp  make_move_test.cpp  move_generation_test.cpp  perft_test.cpp  position_test.cpp  unmake_move_test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp  example_io.cpp
tools/: .clang-tidy  CMakeLists.txt
tools/bitmap_tool/: CMakeLists.txt  bitmap_tool.cpp
tools/chesscore_io/: CMakeLists.txt  bitboard_io.cpp  bitmap_io.cpp  piece_io.cpp
tools/chesscore_io/include/chesscore_io/: piece_io.h
tools/fen_display/: CMakeLists.txt
tools/table_generator/: CMakeLists.txt  bigmap.cpp  bigmap.h  main.cpp  patterns.cpp  table_gen.cpp
